# tech-test

./: .env.example  Dockerfile  Makefile  README.md  compose.test.yml  compose.yml  pyproject.toml
.github/workflows/: run-tests.yml
alembic/: env.py
alembic/versions/: f6dc12caa645_.py
api/: config.py  main.py
api/database/: db.py
api/models/: ai_analysis_log.py
api/routers/: ai_analysis_log.py  mock_up.py
api/schemas/: ai_analysis_log.py  base.py  mock_up.py
api/services/: ai_analysis_log.py  mock_up.py
api/settings/: logging.py
tests/: conftest.py  test_ai_analysis_log.py
